# tractor

./: .devcontainer.json  .dockerignore  .drone.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  bootstrap-apt.sh  bootstrap-venv.sh  bootstrap.sh  buf.yaml  devel.sh  main.cpp  multicast-receiver.cpp  requirements.txt  setup.bash  version.sh  workspace.code-workspace
app/: docker-compose.dev.yml  docker-compose.yml
cmake/: farm_ng_modules.cmake
doc/: CMakeLists.txt  TODO.md  applications.rst  bibliography.rst  calibration_application.rst  calibration_module.rst  ci.rst  conf.py  contributing.rst  core_module.rst  faqs.rst  frontend_module.rst  getting_started.rst  helloworld_tutorial.rst  index.rst  infrastructure.rst  installation.rst  libraries.rst  license.rst  microtractor_application.rst  perception_module.rst  program_tutorial.rst  service_tutorial.rst  tractor_module.rst  tutorials.rst  users.rst  visualizer_tutorial.rst
docker/: base.Dockerfile  devel-l4t.Dockerfile  devel.Dockerfile  docker-compose.devel.yml  grpc.Dockerfile  loop_forever.sh  opencv.Dockerfile  setup.bash  webservices.Dockerfile
docs/: app.md
jetson/: camera.sh  install.sh  logger.sh  prometheus.yml  readme.md  tractor-bringup.service  tractor-webservices.service  tractor.sh  (+1 more)
modules/core/cpp/farm_ng/: CMakeLists.txt  countdown.cpp
modules/perception/cpp/farm_ng/: CMakeLists.txt  convert_rs2_bag.cpp  create_video_dataset.cpp  detect_apriltags.cpp  rs2_bag_to_event_log.cpp  rs2_bag_to_eventlog.cpp  tracking_camera.cpp
modules/perception/cpp/farm_ng/perception/: CMakeLists.txt  apriltag.cpp  apriltag.h  camera_model.cpp  camera_model.h  camera_pipeline.cpp  camera_pipeline.h  create_video_dataset_program.cpp  create_video_dataset_program.h  frame_grabber_intel.cpp  frame_grabber_k4a.cpp  image_loader.cpp  image_loader.h  image_sequence_writer.h  intel_bag_utils.h  intel_rs2_utils.cpp  intel_rs2_utils.h  point_cloud.cpp  pose_graph.h  pose_utils.cpp  tensor.cpp  tensor.h  video_streamer.cpp  video_streamer.h
(+197 files in other folders)
